--- a/app/views/bikes/show.html.erb
+++ b/app/views/bikes/show.html.erb
@@ -180,9 +180,11 @@
     $("#send_to_friend").modal('hide');
     return false
   });
+ 
   $('ul.image_list li').click(function() {
     var id= "<%=@bike.id%>";
     var pic_id = $(':first-child', this).attr("id");
+    $("#bike_picture").attr("src", "<%= image_path 'load.gif' %>");
     $.ajax({
       url: "<%=change_picture_bikes_path%>",
       data: {id: id, pic_id: pic_id },
