--- a/app/views/terms_and_conditions/index.html.erb
+++ b/app/views/terms_and_conditions/index.html.erb
@@ -4,9 +4,9 @@
 	<div class = "legen">Terms and Conditions</div>
 	Bikes Bechnu Terms of Use. These terms are effective July 1st, 2013
 <h3>Introduction.</h3>
- <div>Welcome to bikes.bechnu.com.au ("Bikes Bechnu"). By accessing Bikes Bechnu you are agreeing to the following terms, which are designed to make sure that Bikes Bechnu works for everyone. Bikes Bechnu is provided to you by "bikesbechnu" also referred to below as "Bikes Bechnu". This policy is effective July 1st, 2013.</div>
+ <div>Welcome to bikes.bechnu.com ("Bikes Bechnu"). By accessing Bikes Bechnu you are agreeing to the following terms, which are designed to make sure that Bikes Bechnu works for everyone. Bikes Bechnu is provided to you by "bikesbechnu" also referred to below as "Bikes Bechnu". This policy is effective July 1st, 2013.</div>
 <div>
-Using Bikes Bechnu.As a condition of your use of Bikes Bechnu you agree that you will not:
+Using Bikes Bechnu. As a condition of your use of Bikes Bechnu you agree that you will not:
 <ul>
 <li>violate any laws;</li>
 <li>violate the Posting Rules;</li>
