--- a/app/views/bike_specs/index.html.erb
+++ b/app/views/bike_specs/index.html.erb
@@ -67,13 +67,15 @@
 
 <script type="text/javascript">
     var div =1
+    var sort= 'latest'
+  var direction= null
     $(window).scroll(function() 
     { 
         if($(window).scrollTop() + $(window).height() == $(document).height()) 
         {
             div=div+1
-            <%if(params.has_key?(:type) or params.has_key?(:body) or params.has_key?(:make) or params.has_key?(:model) or params.has_key?(:color) or params.has_key?(:sort) or params.has_key?(:direction))%>
-                var link= "<%= bike_specs_path(sort: params[:sort], :direction => params[:direction], type: params[:type],body: params[:body], make: params[:make], model: params[:model], color: params[:color] )%>"+'&amp;page='+ div.toString()+ ' div.scroll'
+            <%if(params.has_key?(:body) or params.has_key?(:make) or params.has_key?(:model) or params.has_key?(:sort) or params.has_key?(:direction))%>
+                var link= "<%= bike_specs_path(body: params[:body], make: params[:make], model: params[:model] )%>"+'&sort='+sort+'&direction='+direction+'&amp;page='+ div.toString()+ ' div.scroll'
             <%else%>
                 var link='/bike_specs?page='+ div.toString()+ ' div.scroll' 
             <%end%>
@@ -89,23 +91,33 @@
         if (str =="1"){
             $('div.bikes_sort').load('<%= bike_specs_path(sort: "latest", type: params[:type],body: params[:body], make: params[:make], model: params[:model], color: params[:color], location: params[:location] ) + " div.results"%>');
             div=1;
+            sort= 'latest'
+            direction= null
         };
         if (str =="2"){
-            $('div.bikes_sort').load('<%= bike_specs_path(sort: "price", :direction => "desc", type: params[:type],body: params[:body], make: params[:make], model: params[:model], color: params[:color], location: params[:location] ) + " div.results"%>');
+            $('div.bikes_sort').load('<%= bike_specs_path(sort: "price", :direction => "desc", type: params[:type],body: params[:body], make: params[:make], model: params[:model] ) + " div.results"%>');
             div=1;
+            sort= 'price'
+            direction= 'desc'
             //window.location.replace("<%= bikes_path(sort: "price", :direction => "desc", body: params[:body]) %>");
         };
         if (str =="3"){
-            $('div.bikes_sort').load('<%= bike_specs_path(sort: "price", :direction => "asc", type: params[:type],body: params[:body], make: params[:make], model: params[:model], color: params[:color], location: params[:location] ) + " div.results"%>');
+            $('div.bikes_sort').load('<%= bike_specs_path(sort: "price", :direction => "asc", type: params[:type],body: params[:body], make: params[:make], model: params[:model]) + " div.results"%>');
             div=1;
+            sort= 'price'
+            direction= 'asc'
         };
         if (str =="4"){
-            $('div.bikes_sort').load('<%= bike_specs_path(sort: "year", :direction => "desc", type: params[:type],body: params[:body], make: params[:make], model: params[:model], color: params[:color], location: params[:location] ) + " div.results"%>');
+            $('div.bikes_sort').load('<%= bike_specs_path(sort: "year", :direction => "desc", type: params[:type],body: params[:body], make: params[:make], model: params[:model]) + " div.results"%>');
             div=1;
+            sort= 'year'
+            direction= 'desc'
         };  
         if (str =="5"){
-            $('div.bikes_sort').load('<%= bike_specs_path(sort: "year", :direction => "asc", type: params[:type],body: params[:body], make: params[:make], model: params[:model], color: params[:color], location: params[:location] ) + " div.results"%>');
+            $('div.bikes_sort').load('<%= bike_specs_path(sort: "year", :direction => "asc", type: params[:type],body: params[:body], make: params[:make], model: params[:model]) + " div.results"%>');
             div=1;
+            sort= 'year'
+            direction= 'asc'
         };
     });
 </script>
