--- a/app/views/bikes/show.html.erb
+++ b/app/views/bikes/show.html.erb
@@ -184,7 +184,7 @@
   $('ul.image_list li').click(function() {
     var id= "<%=@bike.id%>";
     var pic_id = $(':first-child', this).attr("id");
-    $("#bike_picture").attr("src", "<%= image_path 'load.gif' %>");
+    $("#bike_picture").attr("src", "<%= image_path 'loader.gif' %>");
     $.ajax({
       url: "<%=change_picture_bikes_path%>",
       data: {id: id, pic_id: pic_id },
