--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -1713,7 +1713,7 @@ ul#selection li.refine_search
 	{
 		position: fixed;
 	}
-	.navbar-fixed-top, .navbar-fixed-bottom 
+	.navbar-fixed-top
 	{
 		margin-left: 0;
 		margin-right: 0;
