--- a/app/views/bike_specs/index.html.erb
+++ b/app/views/bike_specs/index.html.erb
@@ -68,13 +68,15 @@
 <script type="text/javascript">
     var div =1
     var sort= 'latest'
-  var direction= null
- 
+    var direction= null
+    var check= false;
     $(window).scroll(function() 
     { 
         
-        if($(window).scrollTop()+ $(window).height()> ($(document).height()*.85)) 
+        if(($(window).scrollTop()+ $(window).height()> ($(document).height()*.85) && check==false)||
+            ($(window).scrollTop()+ $(window).height()== $(document).height()))
         {
+            check = true;
             div=div+1
             <%if(params.has_key?(:body) or params.has_key?(:make) or params.has_key?(:model) or params.has_key?(:sort) or params.has_key?(:direction))%>
                 var link= "<%= bike_specs_path(body: params[:body], make: params[:make], model: params[:model] )%>"+'&sort='+sort+'&direction='+direction+'&amp;page='+ div.toString()+ ' div.scroll'
@@ -82,6 +84,10 @@
                 var link='/bike_specs?page='+ div.toString()+ ' div.scroll' 
             <%end%>
             $("div." +div.toString()).load(link, function() {
+                setTimeout(function()
+                { 
+                    check = false; 
+                }, 3000);
             });
         }
     });
