--- a/app/views/bikes/index.html.erb
+++ b/app/views/bikes/index.html.erb
@@ -114,8 +114,12 @@
   var div =1
   var sort= 'latest'
   var direction= null
+  var check= false;
   $(window).scroll(function() { 
-    if($(window).scrollTop() + $(window).height() > $(document).height()*.85) {
+    if(($(window).scrollTop()+ $(window).height()> ($(document).height()*.85) && check==false)||
+            ($(window).scrollTop()+ $(window).height()== $(document).height()))
+    {
+      check = true;
       div=div+1
       <%if(params.has_key?(:type) or params.has_key?(:body) or params.has_key?(:make) or params.has_key?(:model) or params.has_key?(:color) or params.has_key?(:sort) or params.has_key?(:direction) or params.has_key?(:price_to) or params.has_key?(:price_from))%>
         var link= "<%= bikes_path(type: params[:type],body: params[:body], make: params[:make], model: params[:model], color: params[:color], price_from: params[:price_from], price_to: params[:price_to] )%>"+'&sort='+sort+'&direction='+direction+'&amp;page='+ div.toString()+ ' div.scroll'
@@ -125,6 +129,10 @@
       <%end%>
       
       $("div." +div.toString()).load(link, function() {
+        setTimeout(function()
+                { 
+                    check = false; 
+                }, 3000);
       });
     }
   });
