--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -82,6 +82,7 @@
             <!--/.nav-collapse -->
         </div>
       </div>
+
     </div>
     <div id="main_page_header">
       <%= render "shared/logo"%>
@@ -89,6 +90,16 @@
     <div class="container-fluid">
       <div class="row-fluid">
         <div class="span12">
+          <%if !notice.nil?%>
+            <p class="alert alert-error"><%= notice %>
+            <button type="button" class="close" data-dismiss="alert">&times;</button></p>
+          <%end%>
+          <%if !alert.nil?%>
+            <p class="alert"><%= alert %>
+            <button type="button" class="close" data-dismiss="alert">&times;</button>
+            </p>
+          <%end%>
+
           <%= yield %>
         </div>
       </div><!--/row-->
