--- a/app/views/bike_specs/showroom.html.erb
+++ b/app/views/bike_specs/showroom.html.erb
@@ -53,7 +53,7 @@
         
           <a href = '<%=bike_specs_path(make: "Bajaj")%>' title ="Bike Showroom Bajaj"><div class= "image_border"><%=image_tag "bajaj.jpg", size: "67x62"%></div></a>
           <a href = '<%=bike_specs_path(make: "Daelim")%>' title ="Bike Showroom Daelim"><div class= "image_border"><%= image_tag "daelim.jpg", size: "67x62"%></div></a>
-          <a href = '<%=bike_specs_path(make: "Hero Honda")%>' title ="Bike Showroom Hero"><div class= "image_border"><%= image_tag "hero-honda.jpg", size: "67x62"%></div></a>
+          <a href = '<%=bike_specs_path(make: "Hero")%>' title ="Bike Showroom Hero"><div class= "image_border"><%= image_tag "hero-honda.jpg", size: "67x62"%></div></a>
           <a href = "<%=bike_specs_path(make: 'Honda')%>" title ="Bike Showroom Honda"><div class= "image_border"><%= image_tag "honda.jpg", size: "67x62"%></div></a>
         
         
