Marketting tool and error messages

--- a/app/views/bikes/_new_bike.html.erb
+++ b/app/views/bikes/_new_bike.html.erb
@@ -6,7 +6,7 @@
          	<tr>
         		<td>
               <ul>
-        			  <li><%=link_to "Hero Honda", bike_specs_path(make: "Hero Honda")%></li>
+        			  <li><%=link_to "Hero", bike_specs_path(make: "Hero")%></li>
         		    <li><%=link_to "Bajaj", bike_specs_path(make: "Bajaj")%></li>
         		    <li><%=link_to "TVS", bike_specs_path(make: "TVS")%></li>
         		  </ul>
