--- a/app/views/bike_specs/showroom.html.erb
+++ b/app/views/bike_specs/showroom.html.erb
@@ -77,9 +77,9 @@
           
             <%@latest_bike.each do |bike|%>
                     <% if !bike.pictures.last.nil?%>
-                    <a href = '<%=bike_spec_path(bike)%>'><div class= "image_border"><%=image_tag bike.pictures.last.file.url(:original), size: "133x90"%></div></a>
+                    <a href = '<%=bike_spec_path(bike)%>'><div class= "image_border"><%=image_tag bike.pictures.last.file.url(:thumb), size: "100x100"%></div></a>
                     <%else%>
-                    <a href = '<%=bike_spec_path(bike)%>'><div class= "image_border"><%=image_tag "default_image.jpg", size: "133x90"%></div></a>
+                    <a href = '<%=bike_spec_path(bike)%>'><div class= "image_border"><%=image_tag "default_image.jpg", size: "100x100"%></div></a>
                     <%end%>
                     <a href = '<%=bike_spec_path(bike)%>'><%= bike.year %>  <%= bike.make %>  <%= bike.model %>  <%= bike.variant if !bike.variant.nil? %></a>
             <%end%>      
